ingress-nginx/samples/simple.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
  namespace: default
  labels:
    app: app3
spec:
  selector:
    matchLabels:
      app: app3
  replicas: 1
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
        - name: app3
          image: dockersamples/static-site
          ports:
            - name: http
              containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app4
  namespace: default
  labels:
    app: app4
spec:
  selector:
    matchLabels:
      app: app4
  replicas: 1
  template:
    metadata:
      labels:
        app: app4
    spec:
      containers:
        - name: app4
          image: dockersamples/static-site
          ports:
            - name: http
              containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: service3
  namespace: default
spec:
  selector:
    app: app3
  ports:
    - protocol: TCP
      port: 80
  type: ClusterIP
---
kind: Service
apiVersion: v1
metadata:
  name: service4
  namespace: default
spec:
  selector:
    app: app4
  ports:
    - protocol: TCP
      port: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: ingress-nginx.test.cn
      http:
        paths:
          - backend:
              serviceName: service3
              servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx-canary
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "Source"
    nginx.ingress.kubernetes.io/canary-by-header-value: "Michael"
    nginx.ingress.kubernetes.io/canary-weight: "50"
spec:
  rules:
    - host: ingress-nginx.test.cn
      http:
        paths:
          - backend:
              serviceName: service4
              servicePort: 80
---
